Implements best practices, relative positioning of elements in site header component, personal-info section, improves appearance.

--- a/components/contactus.html
+++ b/components/contactus.html
@@ -1,6 +1,6 @@
-<section class="w3-container w3-card-4" id="contact">
+<section class="w3-container" id="contact">
         <h3> <i class="fa fa-phone" aria-hidden="true"></i> CONTACT ME</h3>
-          <div class="w3-row-padding">
+          <div class="w3-row">
             <div class="w3-col l6" id="map">
               <header class="w3-green">
                 <h3>Find Me on Map &darr;</h3>
