--- a/components/skills.html
+++ b/components/skills.html
@@ -1,5 +1,5 @@
-<section class="w3-container w3-card-4" id="skills">
-    <h3> SKILLS</h3><br/>
+<section class="w3-container" id="skills">
+    <h3> SKILLS</h3>
       <div class="w3-row" style="font-size: 1.2em;font-size: medium;font-variant: small-caps;">
         <div class="w3-col w3-center">
           <p style="width:300px;display:inline-block;">SHOW ME YOUR SKILLS IN: </p>
