--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,11 +1,11 @@
 
   <ul class="w3-green" id="burger">
-    <li><a href="#" ng-click="sideMenuToggle()">&#9776;</a>
+    <li><a href="#" ng-click="sideMenuToggle()"><i class="fa fa-bars" aria-hidden="true"></i></a>
     </li>
   </ul>
 
 <div class="w3-top"> <!-- Forces navbar to stay sticked at the top -->
-  <ul class="w3-navbar w3-green w3-card-4" id="navbar-large">
+  <ul class="w3-navbar w3-green w3-card-8" id="navbar-large">
     <li><a class="w3-padding-16" href="#">
       PORTFOLIO <sup class="w3-tag w3-red">Alpha</sup></a>
     </li>
