--- a/components/timeline.html
+++ b/components/timeline.html
@@ -1,4 +1,4 @@
-<div class="w3-container w3-card-4">
+<div class="w3-container">
 	<div class="w3-row">
 		<div class="w3-col">
 			<section class="timeline">
