--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ ul.socialicons {
     display: -ms-inline-flexbox;
     display: inline-flex;
     -webkit-padding-start: 0px;
+    margin: 0;
 }
  
 ul.socialicons li {
@@ -87,13 +88,7 @@ ul.socialicons li a i:hover {
     opacity: .7;
     transform: scale(1.1);
 }
-.fa-share-alt{
-  background:#dd4b39;
-}
-.fa-download{
-  background:#dd4b39;
-} 
-.fa-envelope-o {
+.fa-download, .fa-share-alt{
   background:#dd4b39;
 }
 
@@ -107,16 +102,24 @@ ul.socialicons li a i:hover {
 
 footer{
     text-align: center;
+    color: #fff;
 }
-          
+
+h2#name {
+  margin-top: -18px;
+  margin-bottom: -18px;
+}
+
+h2#name > span {
+  color: #4CAF50;
+}
+
 h3 {
    text-align: center;
+   font-variant: small-caps;
 }
 td a {
   text-decoration: none;
-}
-.mg-40 {
-    margin-left: 40px;
 }
 
 article#main {
@@ -136,6 +139,12 @@ article#main {
   }
 }
 
+@media screen and (min-width: 601px) {
+  #personal-info { 
+   left: 9px;position: relative;  
+  }
+}
+
 @media screen and (min-width:  1188px) {
   #burger {
     display: none;
@@ -151,9 +160,6 @@ article#main {
     padding: 8px 4px;
     font-size: 1.2em;
     background-color: rgba(211, 211, 211, 0.31);
-  }
-  .w3-dropdown-hover {
-    background-color: #4CAF50!important;
   }
 }
 
@@ -193,77 +199,29 @@ article#main {
   }
 }
 
-p.speech {
-  position: relative;
-  width: 200px;
-  height: 40px;
-  text-align: center;
-  line-height: 40px;
-  background-color: #fff;
-
-/*  border: 4px solid #666;*/
-    border-top-color: rgb(102, 102, 102);
-    border-top-style: solid;
-    border-top-width: 0px;
-    border-right-color: rgb(102, 102, 102);
-    border-right-style: solid;
-    border-right-width: 0px;
-    border-bottom-color: rgb(102, 102, 102);
-    border-bottom-style: solid;
-    border-bottom-width: 0px;
-    border-left-color: rgb(102, 102, 102);
-    border-left-style: solid;
-    border-left-width: 0px;
-    border-image-source: initial;
-    border-image-slice: initial;
-    border-image-width: initial;
-    border-image-outset: initial;
-    border-image-repeat: initial;
-
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  
-  /*border-radius: 30px;*/
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
-  
-  /*-webkit-box-shadow: 2px 2px 4px #888;
-  -moz-box-shadow: 2px 2px 4px #888;
-  box-shadow: 2px 2px 4px #888;*/
-
-  font-weight: bolder;
+.speech {
+    position: relative;
+    color: #4CAF50;
+    font-size: 10em;
+    transform: rotateY(180deg);
+    top: -16px;
+    left: 3px;
 }
-p.speech:before {
-  content: ' ';
-  position: absolute;
-  width: 0;
-  height: 0;
-  left: 53px;
-  top: 30px;
-  border: 13px solid;
-  /*border-color: #666 transparent transparent #666;*/
-  border-top-color: transparent;
-    border-right-color: black;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-  margin-left: 120px;
+.speech-text {
+    position: absolute;
+    text-align: center;
+    top: 23px;
+    left: 43px;
+    font-variant: small-caps;
+    font-weight: bold;
 }
-p.speech:after {
-  content: ' ';
-  position: absolute;
-  width: 0;
-  height: 0;
-  left: 53px;
-  top: 30px;
-  border: 13px solid;
-  /*border-color: #666 transparent transparent #666;*/
-  border-top-color: #4caf50;
-    border-right-color: #4caf50;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-  margin-left: 120px;
+
+hr {
+  margin: 0;
+}
+
+address {
+  line-height: 1.7;
 }
 
 th {
