Improves appearance of speech bubble, updates last used month of skills.

--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,15 +1,16 @@
 <section class="w3-container">
     <div class="w3-row" id="siteHeader">
-      <div class="w3-col w3-card-2 m4 l2" style="height:350px;">
+      <div class="w3-col w3-card-2 m3 l2" style="height:289px;">
         <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
       </div>
-      <div class="w3-col m8 l10" style="position: relative;">
-        <i class="fa fa-comment-o speech" aria-hidden="true"></i> <span class="speech-text">Hello <br/>and<br/> Welcome</span>
+      <div class="w3-col m9 l10" style="position: relative;">
+        <p class="speech">Hello &amp; Welcome</p>
         <div id="personal-info">
           <h2 id="name"> I'M <span>NAVNEET PRAKASH</span></h2>
-          <p>
+          <h6>
             <a class="help" href="https://en.wikipedia.org/wiki/Front-end_web_development">Frontend Developer</a> at
             <a class="company" href="http://www.nxtlifetechnologies.com/">NxtLife Technologies Ltd. UK</a><hr/>
+          </h6>
             <address>
               <strong>Age:</strong> 24 <br/>
               <strong>
@@ -23,9 +24,8 @@
                 Email:</span>
               </strong> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
             </address>
-          </p>
           <ul class="socialicons">
-            <li style="line-height: 2.5;">Let's be in touch</li>&nbsp;&nbsp;
+            <li style="line-height: 2.5;">Let's be in touch</li>
             <li><a href="http://facebook.com/techraiders" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
             <li><a href="https://in.linkedin.com/in/techraiders" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
             <li><a href="https://github.com/techraiders" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </li>
