--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
     background-attachment: fixed;
   }
 
-a:not([href]) {
+.w3-navbar a:not([href]) {
   cursor: not-allowed;
 }
 
@@ -91,6 +91,70 @@ ul.socialicons li a i:hover {
 .fa-download, .fa-share-alt{
   background:#dd4b39;
 }
+.slides {
+  margin-top: -10px;
+}
+.slides figure {
+  margin: 0 20px;
+  position: relative;
+  overflow: hidden;
+}
+.slides figure img {
+  margin: 0;
+  transition: all 1.5s;
+}
+.slides:hover img {
+  transform: scale(1.05);
+}
+.slides a{
+  position: absolute;
+  top: 50%;
+  background-color: rgba(0,0,0,.8);
+  color: white;
+  z-index: 0;
+  font-size: 1.5em;
+  font-weight: bold;
+  height: 1.5em;
+  width: 1.5em;
+  border-radius: 50%;
+  padding-left: 5px;
+  transition: all .5s;
+  padding-left: .3em;
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+}
+.slides a#left {
+  left: 20px;
+  transform: translateX(-34px);
+}
+.slides a#right {
+  right: 20px;
+  transform: translateX(34px);
+}
+.slides:hover a#left, .slides:hover a#right  {
+  transform: none;
+  opacity: .8;
+  visibility: visible;
+}
+figcaption {
+  position: absolute;
+  bottom: 4px;
+  right: 0;
+  color: white;
+  text-align: center;
+  background-color: rgba(0,0,0,.5);
+  font-size: 1.3em;
+  opacity: 0;
+  visibility: hidden;
+  transform: rotate(360deg) translateY(-345px);
+  transition: all 2s ease-in-out .5s;
+}
+.slides:hover figcaption {
+  opacity: 1;
+  visibility: visible;
+  transform: none;
+}
 
 #shareFromBottom h5 {
   background-color: #ff9800;
@@ -118,19 +182,21 @@ td a {
 }
 
 #personal-info {
-	position: relative;
-	top: 9px;
+  position: relative;
+  top: 9px;
 }
 h2#name {
-	margin: 0;
+  margin: 0;
 }
 #name + h6 {
-	margin: 0;
+  margin: 0;
 }
 article#main {
     margin: 0 auto 20px auto;
     background-color: #fff;
 }
+
+
 
 @media only screen and (min-width: 993px) {
   .timeline ul {
