Adds Projects Showcase section in the portfolio, creates Pig-animation component, displays into the showcase using ui-view of ui-router.

--- a/components/contactus.html
+++ b/components/contactus.html
@@ -121,7 +121,7 @@
           
           <div class="w3-row">
             <div class="w3-col w3-center">
-              <a href="#" id="bottom">Go to top (disabled) </a>
+              <a id="bottom">Go to top (disabled) </a>
             </div>
           </div>
       </section>
