--- a/components/navbar.html
+++ b/components/navbar.html
@@ -7,13 +7,12 @@
 <div class="w3-top"> <!-- Forces navbar to stay sticked at the top -->
   <ul class="w3-navbar w3-green w3-card-8" id="navbar-large">
     <li><a class="w3-padding-16" href="#">
-      PORTFOLIO <sup class="w3-tag w3-red">Alpha</sup></a>
+      PORTFOLIO <span class="w3-tag w3-red">Alpha</span></a>
     </li>
-    <li><a class="w3-padding-16" href="" ng-click="gotoAnchor(skills)">SKILLS</a></li>
-    <li><a class="w3-padding-16" href="#">EDUCATION</a></li>
-    <li><a class="w3-padding-16" href="#">EXPERIENCE</a></li>
-    <li><a class="w3-padding-16" href="#">ACHIEVEMENTS</a></li>
-    <li><a class="w3-padding-16" href="#">CALENDAR</a></li>
+    <li><a class="w3-padding-16" ng-click="gotoAnchor(skills)">SKILLS</a></li>
+    <li><a class="w3-padding-16">LIFE EVENTS</a></li>
+    <li><a class="w3-padding-16">ACHIEVEMENTS</a></li>
+    <li><a class="w3-padding-16">CALENDAR</a></li>
     <li class="w3-dropdown-hover">
       <a class="w3-padding-16" href="#">WORK SAMPLES <i class="fa fa-caret-down"></i></a>
       <div class="w3-dropdown-content w3-border w3-border-green">
@@ -26,16 +25,15 @@
             <a class="w3-padding-16" href="https://goo.gl/photos/3trtkzuWVutgSi3w7">GALLARY</a>
       </div>
     </li>
-    <li><a class="w3-padding-16" href="#">REFERENCES</a></li>
-    <li><a class="w3-padding-16" href="#">CONTACTS</a></li>
+    <li><a class="w3-padding-16">REFERENCES</a></li>
+    <li><a class="w3-padding-16">CONTACTS</a></li>
     <li class="w3-right w3-navitem"><i class="fa fa-search w3-margin-right"></i></li>
   </ul>
 
   <nav class="w3-sidenav w3-collapse w3-white w3-card-2 w3-animate-left" id="menuSidenav" ng-init="w3_close()">
     <a class="w3-padding-8" href="" ng-click="w3_close()">CLOSE</a>
     <a class="w3-padding-8" href="#">SKILLS</a>
-    <a class="w3-padding-8" href="#">EDUCATION</a>
-    <a class="w3-padding-8" href="#">EXPERIENCE</a>
+    <a class="w3-padding-8" href="#">LIFE EVENTS</a>
     <a class="w3-padding-8" href="#">ACHIEVEMENTS</a>
     <a class="w3-padding-8" href="#">CALENDAR</a>
     <a class="w3-padding-8" href="#">PROJECTS</a>
