--- a/components/timeline.html
+++ b/components/timeline.html
@@ -23,7 +23,7 @@
 						<article class="w3-card-4">
 							<h6><i class="fa fa-briefcase" aria-hidden="true"></i> FRONT END DEVELOPER </h6>
 							<h6 class="content"><a href="http://www.nxtlifetechnologies.com" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> NxtLife Technologies Ltd. UK</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> Sept - Nov</h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> Sept 2016 - Nov 2016</h6>
 							<p>Responsible for planning, designing, and doing revision controlled development of cross browser compliant and platform independent entire Front End from the scratch using Ionic, SASS, AngularJs, JavaScript, Git and Bitbucket.</p>
 						</article>
 					</li>
@@ -31,7 +31,7 @@
 						<article class="w3-card-4">
 							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> ONLINE TRAINING </h6>
 							<h6 class="content"><i class="fa fa-globe" aria-hidden="true"></i> <a href="http://www.udemy.com/">Udemy.com and Lynda.com</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July - Aug.</h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July 2016 - Aug 2016</h6>
 							<p>Learned AngularJs, Bootstrap3 grid system, W3.css, Google chart, Brushed up existing skills.</p>
 						</article>
 					</li>
@@ -39,7 +39,7 @@
 						<article class="w3-card-4">
 							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> ONLINE TRAINING </h6>
 							<h6 class="content"><i class="fa fa-globe" aria-hidden="true"></i> <a href="http://www.udemy.com/">Udemy.com and Lynda.com</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> May - June</h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> May 2016 - June 2016</h6>
 							<p>Learned Angular 2, Git and Github, Aptitude, Reasoning, other research.</p>
 						</article>
 					</li>
@@ -47,7 +47,7 @@
 						<article class="w3-card-4">
 							<h6><i class="fa fa-briefcase" aria-hidden="true"></i> FRESHER </h6>
 							<h6 class="content"><a href="http://www.careertech.in" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> CareerTech IT Solution</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> Feb - April</h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> Feb 2016 - April 2016</h6>
 							<p>Object oriented analysis and design, documentation. Quering &amp; retrieving data from SQL Server database using PL/SQL. Followed by exam preparation.</p>
 						</article>
 					</li>
@@ -55,7 +55,7 @@
 						<article class="w3-card-4">
 							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> MASTER OF COMPUTER APPLICATIONS </h6>
 							<h6 class="content"><a href="http://www.dypimca.org/" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> Pad. Dr. D.Y.Patil Institute of MCA Akurdi, Pune.</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July - April</h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July 2016 - April 2016</h6>
 							<p>Graduated in First Class from University of Pune.</p>
 						</article>
 					</li>
