--- a/components/skills.html
+++ b/components/skills.html
@@ -5,7 +5,7 @@
         <div class="w3-col w3-center">
           <p style="width:300px;display:inline-block;">SHOW ME YOUR SKILLS IN: </p>
           <select class="w3-select w3-margin w3-padding" name="option" ng-model="selectedDiv" ng-options="item for item in div" style="width:190px;display:inline-block;"></select>
-          <br/>
+          <p class="w3-text-blue">Green Color of bar represents rating/progress in that skill. </p>
         </div><!-- col -->
       </div><!-- row -->
           <div ng-switch="selectedDiv">
